chore: Actualización en base al análisis de código en GameService